# SpyderV2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  claude.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
apps/network_graph/: admin.py  apps.py  dsl.py  models.py  parser.py  schema.py  tasks.py  urls.py  views.py
apps/network_graph/management/commands/: convert_attended_to_knows.py
apps/network_graph/migrations/: 0001_initial.py  0002_node_is_ghost.py  0003_node_profile_image.py  0004_nodetemplate.py  0005_ingestion_node_summary_resolutioncandidate.py  0006_add_ingestion_title_autocreate_dismissed.py  0007_add_node_email_field.py  0008_backfill_node_email.py  0009_connection_metadata.py
apps/network_graph/services/: extraction.py  graph_writer.py  ingest_document.py  ingest_freeform.py  ingest_voice.py  resolution.py  summarization.py
config/: celery.py  settings.py  urls.py
scripts/: entrypoint.sh
static/css/: graph.css
static/js/: fab.js  graph.js  ingestion.js  notifications.js
templates/network_graph/: index.html
zPlans/: MVP Phase 2 Plan.md
